0.2.0
-----

 - Fix "No input files given" bug in `solcx.compile_source()` on v0.5.x

0.1.1
-----

 - Better verbosity when building from source fails

0.1.0
-----

 - Initial forked release
 - Support for `solc 0.5.x`
 - Drop support for `solc < 0.4.11`
 - Add Windows installer
 - Change install location to ./solcx/bin - no longer uses standard installed verion
 - Change active solc version with `solcx.set_solc_version`


Original py-solc changelog:

3.0.0
-----

- Add support for python 3.6
- Drop support for python 2.7

2.2.0
-----

- Support for `solc==0.4.20`
- Support for `solc==0.4.21`
- Support for `solc==0.4.22`
- Support for `solc==0.4.23`
- Support for `solc==0.4.24`

2.1.0
-----

- Support for `solc==0.4.18`
- Support for `solc==0.4.19`

2.0.0
-----

- Remove gevent support

1.4.0
-----

- Support for `solc==0.4.17`

1.3.0
-----

- Support for `solc==0.4.14`
- Support for `solc==0.4.15`
- Support for `solc==0.4.16`

1.2.2
-----

- Bugfix for solc installation for certain platform.

1.2.1
-----

- Add support for `solc==0.4.13`

1.2.0
-----

- Add support for `solc==0.4.12`
- Experimental `solc` installation feature.  Install solc using the `solc.install_solc` function or `python -m solc.install v0.4.12`

1.1.0
-----

- Add support for `solc==0.4.11`
- Add support for `--standard-json` command line argument via `compile_standard` function.
- Add support for `--allow-paths` command line argument via `allow_paths` kwarg.

1.0.1
-----

- Expands test suite to include solidity `0.4.7`, `0.4.8` and `0.4.9`

1.0.0
-----

- Remove contract data modification from library

0.9.1
-----

- Add `devdoc` and `userdoc` to compiler output object.

0.9.0
-----

- Change from `async` terminology to `compat`
- Change env variables to `TESTRPC_THREADING_BACKEND` and `THREADING_BACKEND`

0.8.0
-----

- Remove hard gevent dependency

0.7.0
-----

- Drop support for 0.3.6
- Add support for 0.4.6
- Add ability to specify import remappings

0.6.0
-----
