@@ -3,6 +3,7 @@ Install solc
 """
 from io import BytesIO
 import os
+from pathlib import Path
 import requests
 import shutil
 import stat
@@ -14,36 +15,37 @@ import zipfile
 DOWNLOAD_BASE = "https://github.com/ethereum/solidity/releases/download/{}/{}"
 API = "https://api.github.com/repos/ethereum/solidity/releases/latest"
 
-sep = "\\" if sys.platform == "win32" else "/"
 solc_version = None
 
 
 def get_solc_folder():
-    return __file__[:__file__.rindex(sep)] + sep + "bin" + sep
+    path = Path(__file__).parent.joinpath('bin')
+    path.mkdir(exist_ok=True)
+    return path
 
 
-def get_executable(version = None):
+def get_executable(version=None):
     if not version:
         version = solc_version
-    solc_bin = "{}solc-{}".format(get_solc_folder(), version)
+    solc_bin = get_solc_folder().joinpath("solc-" + version)
     if sys.platform == "win32":
-        return solc_bin + sep + "solc.exe"
-    return solc_bin
+        return str(solc_bin.joinpath("solc.exe"))
+    return str(solc_bin)
 
 
-def set_solc_version(version = None):
+def set_solc_version(version=None):
     version = _check_version(version)
-    if not os.path.exists(get_executable(version)):
+    if not Path(get_executable(version)).exists():
         install_solc(version)
     global solc_version
     solc_version = version
 
 
 def get_installed_solc_versions():
-    return sorted([i[5:] for i in os.listdir(get_solc_folder()) if 'solc-v' in i])
+    return sorted(i.name[5:] for i in get_solc_folder().glob('solc-v*'))
 
 
-def install_solc(version = None):
+def install_solc(version=None):
     version = _check_version(version)
     if sys.platform.startswith('linux'):
         _install_solc_linux(version)
@@ -86,26 +88,25 @@ def _check_subprocess_call(command, message=None, verbose=True, **proc_kwargs):
 
 
 def _chmod_plus_x(executable_path):
-    current_st = os.stat(executable_path)
-    os.chmod(executable_path, current_st.st_mode | stat.S_IEXEC)
+    executable_path.chmod(executable_path.stat().st_mode | stat.S_IEXEC)
 
 
 def _wget(url, path):
     try:
         _check_subprocess_call(
-            ["wget", url, "-O", path],
+            ["wget", url, "-O", str(path)],
             "Downloading solc from {}".format(url)
         )
     except subprocess.CalledProcessError:
-        if os.path.exists(path):
-            os.remove(path)
+        if path.exists():
+            path.unlink()
         raise
 
 
 def _install_solc_linux(version):
     download = DOWNLOAD_BASE.format(version, "solc-static-linux")
-    binary_path = get_solc_folder()+"solc-{}".format(version)
-    if os.path.exists(binary_path):
+    binary_path = get_solc_folder().joinpath("solc-" + version)
+    if binary_path.exists():
         print("solc {} already installed at: {}".format(version, binary_path))
         return
     _wget(download, binary_path)
@@ -114,46 +115,45 @@ def _install_solc_linux(version):
 
 def _install_solc_windows(version):
     download = DOWNLOAD_BASE.format(version, "solidity-windows.zip")
-    zip_path = get_solc_folder() + 'solc_{}.zip'.format(version[1:])
-    install_folder = get_solc_folder()+"solc-{}".format(version)
-    if os.path.exists(install_folder):
+    install_folder = get_solc_folder().joinpath("solc-" + version)
+    if install_folder.exists():
         print("solc {} already installed at: {}".format(version, install_folder))
         return
     print("Downloading solc {} from {}".format(version, download))
     request = requests.get(download)
     with zipfile.ZipFile(BytesIO(request.content)) as zf:
-        zf.extractall(install_folder)
+        zf.extractall(str(install_folder))
 
 
 def _install_solc_osx(version):
-    tar_path = get_solc_folder() + "solc-{}.tar.gz".format(version)
-    source_folder = get_solc_folder() + "solidity_{}".format(version[1:])
+    tar_path = get_solc_folder().joinpath("solc-{}.tar.gz".format(version))
+    source_folder = get_solc_folder().joinpath("solidity_" + version[1:])
     download = DOWNLOAD_BASE.format(version, "solidity_{}.tar.gz".format(version[1:]))
-    binary_path = get_solc_folder()+"solc-{}".format(version)
-    
-    if os.path.exists(binary_path):
+    binary_path = get_solc_folder().joinpath("solc-" + version)
+
+    if binary_path.exists():
         print("solc {} already installed at: {}".format(version, binary_path))
         return
 
     _wget(download, tar_path)
 
-    with tarfile.open(tar_path, "r") as tar:
-        tar.extractall(get_solc_folder())
-    os.remove(tar_path)
+    with tarfile.open(str(tar_path), "r") as tar:
+        tar.extractall(str(get_solc_folder()))
+    tar_path.unlink()
 
     _check_subprocess_call(
-        ["sh", source_folder+'/scripts/install_deps.sh'],
+        ["sh", str(source_folder.joinpath('scripts/install_deps.sh'))],
         message="Running dependency installation script `install_deps.sh` @ {}".format(tar_path)
     )
 
     original_path = os.getcwd()
-    os.mkdir(source_folder+'/build') 
-    os.chdir(source_folder+'/build')
+    source_folder.joinpath('build').mkdir(exist_ok=True)
+    os.chdir(str(source_folder.joinpath('build').resolve()))
     try:
         for cmd in (["cmake", ".."], ["make"]):
             _check_subprocess_call(cmd, message="Running {}".format(cmd[0]))
         os.chdir(original_path)
-        os.rename(source_folder+'/build/solc/solc', binary_path)
+        source_folder.joinpath('build/solc/solc').rename(binary_path)
     except subprocess.CalledProcessError as e:
         raise OSError(
             "{} returned non-zero exit status {}".format(cmd[0], e.returncode) +
@@ -162,7 +162,7 @@ def _install_solc_osx(version):
         )
     finally:
         os.chdir(original_path)
-        shutil.rmtree(source_folder)
+        shutil.rmtree(str(source_folder))
 
     _chmod_plus_x(binary_path)
 
