@@ -2,6 +2,7 @@
 -----
 
  - Fix "No input files given" bug in `solcx.compile_source()` on v0.5.x
+ - `install.py` - replace `os.path` with `pathlib.Path`
 
 0.1.1
 -----
